cleaned up code, bug fixes
remove rso button on univ edit works again,
events are truncated to 150 outside event page,
made text areas larger
removed echos used for testing

--- a/pagestyle.css
+++ b/pagestyle.css
@@ -34,7 +34,7 @@ color: red;
 
 /*text for events*/
 #event_title{
-font-size:30;
+font-size:50;
 }
 
 #event_time{
